# pico-temp-humidity

./: .gitignore  README.md
command_line_tool/: Cargo.toml
command_line_tool/src/: csv.rs  lib.rs  main.rs  pico_interface.rs
microcontroller_software/: CMakeLists.txt
microcontroller_software/src/: dht11-sensor.cpp  dht11-sensor.h  main.cpp  sensor_data_handler.cpp  sensor_data_handler.h  uart_handle.cpp  uart_handle.h
pc-code/: Cargo.toml
pc-code/src/: lib.rs  main.rs  pico_interface.rs
pico-code/: CMakeLists.txt
pico-code/src/: dht11-sensor.cpp  dht11-sensor.h  main.cpp  uart_handle.cpp
